--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "Arial-MT";
   src: url("../assets/fonts/Arial-MT.woff");
@@ -61,12 +60,91 @@ body {
   padding: 20px;
 }
 
+.player {
+  display: flex;
+  flex-direction: column;
+}
+
 .player-controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 120px;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
+  width: 350px;
+}
+.player-controls button {
+  margin: 0px 5px 0px 0px;
+}
+
+.player-time {
+  display: flex;
+  align-items: center;
+}
+
+.player-music-time {
+  display: flex;
+  padding: 0px 0px 0px 5px;
+}
+.player-music-time div {
+  padding: 0px 1px 0px 1px;
+}
+
+.player-timeline {
+  cursor: pointer;
+  height: 4px;
+  background: white;
+  border-radius: 1px;
+  opacity: 0.8;
+  width: 100%;
+}
+.player-timeline .player-progress {
+  background: #C5B358;
+  border-radius: 1px;
+  width: 0%;
+  height: 100%;
+  transition: 0.25s;
+}
+
+.player-volume-container {
+  cursor: pointer;
+  position: relative;
+}
+.player-volume-container .player-volume-button {
+  height: 26px;
+  display: flex;
+  align-items: center;
+}
+
+.player-volume-slider {
+  position: absolute;
+  left: -175px;
+  top: 33px;
+  width: 215px;
+  height: 4px;
+  background: white;
+  border-radius: 1px;
+  opacity: 0.8;
+  transition: 0.25s;
+}
+.player-volume-slider .player-volume-percentage {
+  background: #C5B358;
+  border-radius: 1px;
+  height: 100%;
+  width: 75%;
+}
+
+.icon-volume-medium {
+  width: 40px;
+  height: 35px;
+  background-size: 40px 35px;
+  background-image: url("../assets/svg/sound-on.svg");
+}
+
+.icon-volume-none {
+  width: 40px;
+  height: 35px;
+  background-size: 40px 35px;
+  background-image: url("../assets/svg/sound-off.svg");
 }
 
 .play-list {
@@ -88,15 +166,26 @@ body {
 }
 
 .play-item::before {
-  content: "✓";
+  content: " ";
   position: absolute;
   left: 0;
-  top: 2px;
+  top: 5px;
   font-weight: 900;
+  background: url("../assets/svg/play.svg");
+  display: block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 16px;
+  width: 16px;
 }
 
 .item-active::before {
-  color: #C5B358;
+  background: url("../assets/svg/pause-active.svg");
+  display: block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 16px;
+  width: 16px;
 }
 
 .play {
