--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -22,7 +22,8 @@ body {
 
 .player-icon,
 .slider-icon,
-.change-quote {
+.change-quote,
+.settings-app {
   width: 32px;
   height: 32px;
   background-size: 32px 32px;
@@ -38,13 +39,15 @@ body {
 
 .player-icon:hover,
 .slider-icon:hover,
-.change-quote:hover {
+.change-quote:hover,
+.settings-app:hover {
   opacity: 1;
 }
 
 .player-icon:active,
 .slider-icon:active,
-.change-quote:active {
+.change-quote:active,
+.settings-app:active {
   border: 0;
   outline: 0;
   transform: scale(1.1);
@@ -353,6 +356,7 @@ body {
 }
 
 .footer {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -374,6 +378,80 @@ body {
 
 .author {
   min-height: 20px;
+}
+
+.settings-container {
+  position: absolute;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 10px;
+  border: 1px solid #ffffff;
+  padding: 5px 20px;
+  z-index: 1;
+  top: -20px;
+  height: 50%;
+  transition: all 300ms ease-in-out;
+}
+
+.settings-container-hidden {
+  position: absolute;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 10px;
+  border: 0px solid rgba(255, 255, 255, 0);
+  padding: 0px 20px;
+  z-index: 0;
+  top: 140px;
+  height: 0%;
+  transition: all 300ms ease-in-out;
+}
+
+.settings-language {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0px 5px 0px;
+}
+.settings-language div {
+  margin: 0px 5px 0px 5px;
+}
+
+.settings-server-api-container {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0px 5px 0px;
+}
+.settings-server-api-container div {
+  margin: 0px 5px 0px 5px;
+}
+
+.settings-tags-container {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0px 5px 0px;
+}
+.settings-tags-container div {
+  margin: 0px 5px 0px 5px;
+}
+
+.settings-blocks-container {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0px 5px 0px;
+}
+.settings-blocks-container div {
+  margin: 0px 5px 0px 5px;
+}
+
+.settings-app {
+  width: 32px;
+  height: 32px;
+  margin: 0px 0px 0px 10px;
+  background-size: 39px 39px;
+  background-image: url("../assets/svg/settings.svg");
 }
 
 /*# sourceMappingURL=style.css.map */
