--- a/momentum/src/sass/base/_icons.scss
+++ b/momentum/src/sass/base/_icons.scss
@@ -1,6 +1,7 @@
 .player-icon,
 .slider-icon,
-.change-quote {
+.change-quote,
+.settings-app {
     width: 32px;
     height: 32px;
     background-size: 32px 32px;
@@ -16,13 +17,15 @@
 
 .player-icon:hover,
 .slider-icon:hover,
-.change-quote:hover {
+.change-quote:hover,
+.settings-app:hover {
     opacity: 1;
 }
   
 .player-icon:active,
 .slider-icon:active,
-.change-quote:active {
+.change-quote:active,
+.settings-app:active {
     border: 0;
     outline: 0;  
     transform: scale(1.1);
