--- a/momentum/src/sass/layouts/_greeting.scss
+++ b/momentum/src/sass/layouts/_greeting.scss
@@ -6,10 +6,19 @@
     min-height: 48px;
     width: 100vw;
     font-size: 40px;
+    opacity: 1;
+    visibility: visible;
+    transition: all 500ms ease-in-out;
     @include media-tablet {
         min-height: 40px;
         font-size: 32px;
     }
+}
+
+.greeting-hidden {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 500ms  ease-in-out;
 }
   
 .greeting {
