--- a/momentum/src/sass/layouts/_player.scss
+++ b/momentum/src/sass/layouts/_player.scss
@@ -1,6 +1,16 @@
 .player {
     display: flex;
     flex-direction: column;
+    opacity: 1;
+    visibility: visible;
+    transition: all 500ms ease-in-out;
+}
+
+.player-hidden {
+    visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 500ms ease-in-out;
 }
 
 .player-controls {
