--- a/momentum/src/sass/layouts/_weather.scss
+++ b/momentum/src/sass/layouts/_weather.scss
@@ -7,6 +7,16 @@
     width: 180px;
     min-height: 180px;  
     text-align: left;
+    opacity: 1;
+    visibility: visible;
+    transition: all 500ms ease-in-out;
+
+}
+
+.weather-hidden {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 500ms ease-in-out;
 }
   
 .weather-error {
