--- a/momentum/src/sass/layouts/_greeting.scss
+++ b/momentum/src/sass/layouts/_greeting.scss
@@ -13,12 +13,16 @@
         min-height: 40px;
         font-size: 32px;
     }
+    @include media-mobile-small {
+        min-height: 32px;
+        font-size: 24px;
+    }
 }
 
 .greeting-hidden {
     opacity: 0;
     visibility: hidden;
-    transition: all 500ms  ease-in-out;
+    transition: all 500ms ease-in-out;
 }
   
 .greeting {
@@ -27,6 +31,9 @@
     text-align: right;
     @include media-tablet {
         padding: 5px;
+    }
+    @include media-mobile-small {
+        font-size: 16px;
     }
 }
   
@@ -44,9 +51,15 @@
         font-size: 32px;
         padding: 5px;
     }
+    @include media-mobile-small {
+        font-size: 16px;
+    }
 }
   
 .name::placeholder {
     color: #fff;
     opacity: .6;
+    @include media-mobile-small {
+        font-size: 16px;
+    }
 }
