--- a/momentum/src/sass/abstract/_constants.scss
+++ b/momentum/src/sass/abstract/_constants.scss
@@ -16,5 +16,6 @@ $dark-color: #000000;
 $laptop-big-width: 1024px;
 $laptop-small-width: 1024px;
 $tablet-width: 768px;
+$tablet-small-width: 600px;
 $mobile-big-width: 380px;
-$mobile-small-width: 320px;
+$mobile-small-width: 600px;
