--- a/momentum/src/sass/layouts/_player.scss
+++ b/momentum/src/sass/layouts/_player.scss
@@ -4,6 +4,9 @@
     opacity: 1;
     visibility: visible;
     transition: all 500ms ease-in-out;
+    @include media-mobile-small {
+        font-size: 12px;
+    }
 }
 
 .player-hidden {
@@ -22,6 +25,13 @@
     & button {
         margin: 0px 5px 0px 0px;
     }
+    @include media-mobile-small {
+        font-size: 14px;
+        width: 250px;
+        & button {
+            margin: 0px 2px 0px 0px;
+        }
+    }
 }
 
 .player-time {
@@ -34,6 +44,9 @@
     padding: 0px 0px 0px 5px;
     & div {
         padding: 0px 1px 0px 1px;
+    }
+    @include media-mobile-small {
+        font-size: 14px;
     }
 }
 
@@ -50,6 +63,9 @@
         width: 0%;
         height: 100%;
         transition: 0.25s;
+    }
+    @include media-mobile-small {
+        width: 180px;
     }
 }
 
@@ -73,6 +89,11 @@
     border-radius: 1px;
     opacity: 0.8;
     transition: 0.25s;
+    @include media-mobile-small {
+        top: 28px;
+        left: -140px; 
+        width: 160px;
+    }
     .player-volume-percentage {
         background: #C5B358;
         border-radius: 1px;
@@ -86,6 +107,11 @@
     height: 35px;
     background-size: 40px 35px;
     background-image: url("../assets/svg/sound-on.svg");
+    @include media-mobile-small {
+        width: 24px;
+        height: 24px;
+        background-size: 24px 24px;
+    }
 }
 
 .icon-volume-none {
@@ -93,6 +119,11 @@
     height: 35px;
     background-size: 40px 35px;
     background-image: url("../assets/svg/sound-off.svg");
+    @include media-mobile-small {
+        width: 24px;
+        height: 24px;
+        background-size: 24px 24px;
+    }
 }
 
 .play-list {
@@ -107,6 +138,11 @@
     opacity: .8;
     cursor: pointer;
     transition: .3s;
+    @include media-mobile-small {
+        padding: 3px;
+        padding-left: 18px;
+        font-size: 12px;
+    }
 }
 
 .play-item:hover {
@@ -120,12 +156,16 @@
     top: 5px;
     font-weight: 900;
     background: url("../assets/svg/play.svg");
-
     display: block;
     background-size: cover;
     background-repeat: no-repeat;
     height: 16px;
-    width: 16px;  
+    width: 16px; 
+    @include media-mobile-small {
+        top: 4px;
+        height: 12px;
+        width: 12px; 
+    }
 }
 
 .item-active::before {
@@ -142,6 +182,11 @@
     height: 40px;
     background-size: 40px 40px;
     background-image: url("../assets/svg/play.svg");
+    @include media-mobile-small {
+        width: 24px;
+        height: 24px;
+        background-size: 24px 24px;
+    }
 }
 
 .pause {
@@ -150,8 +195,18 @@
 
 .play-prev {
     background-image: url("../assets/svg/play-prev.svg");
+    @include media-mobile-small {
+        width: 20px;
+        height: 20px;
+        background-size: 20px 20px;
+    }
 }
 
 .play-next {
     background-image: url("../assets/svg/play-next.svg");
+    @include media-mobile-small {
+        width: 20px;
+        height: 20px;
+        background-size: 20px 20px;
+    }
 }
